--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,24 @@
-# Remake of my Octopress Blog completely in Jekyll!
-title: tamouse pages
-email: tamouse@gmail.com
-description: > 
-  The rumblings and ramblings of a well-traveled tech-mouse.
+# Site settings
+title: Your awesome title
+email: your-email@domain.com
+description: > # this means to ignore newlines until "baseurl:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://blog.tamouse.org"
-twitter_username: tamouse
-github_username:  tamouse
+url: "http://yourdomain.com" # the base hostname & protocol for your site
+twitter_username: jekyllrb
+github_username:  jekyll
 
 # Build settings
 source: source
 destination: public
 permalink: pretty
 
-gems:
-  - jekyll-redirect-from
-  - jekyll-archives
+# Make sure to install these if you're using them
+# gems:
+#   - jekyll-redirect-from # https://github.com/jekyll/jekyll-redirect-from
+#   - jekyll-archives      # https://github.com/jekyll/jekyll-archives
 
 markdown: kramdown
 kramdown:
@@ -25,15 +28,9 @@ kramdown:
 highlighter: pygments
 lsi: false
 
-defaults:
-  author: "Tamara Temple"
-
-jekyll-archives:
-  layout: default
-  enabled:
-    - categories
+# jekyll-archives:
+#   layout: default
+#   enabled:
+#     - categories
 
 paginate: 15
-
-images:
-  s3path: "http://tt.imageshare.s3.amazonaws.com/"
